fix(engine): Defensive copy in step state when requesting messages (#1211)